fixed bugs, now uploading version 2. added forgot password, android modal page, tried to fix actiona bar showing on launch screen but still cant, fixed icon to non-alpha and 1024x 1024, fixed layout of viewmodal for android

--- a/app/app.scss
+++ b/app/app.scss
@@ -2,6 +2,7 @@
 // @see https://docs.nativescript.org/ui/theme
 @import '~@nativescript/theme/core';
 @import '~@nativescript/theme/blue';
+//@import '~@nativescript/theme/core.light.css';
 
 // Override variables here
 
@@ -28,6 +29,7 @@
 
 .sendEmailIcon {
 	font-size: 40;
+	z-index:0; /* Removes shadow around android buttons */
 }
 
 .pageHome {
